--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,61 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+.container {
+  width: 80%;
+  max-width: 400px;
+  margin: 20px auto;
+  text-align: center;
+ }
+ 
+ .submit_btn {
+  padding: 10px;
+  margin-left: 2px;
+  color: #fff;
+  font-size: 14px;
+  background-color: #FF9302;
+ }
+ 
+ .container input {
+  padding: 11px;
+  border: 2px solid #D6D6D6;
+ }
+ 
+ .todosContainer {
+   display: flex;
+   justify-content: space-between;
+  align-items: center;
+   width: 100%;
+   list-style: none;
+   padding: 0;
+   flex-flow: column;
+ }
+ 
+ .delButton {
+  display: inline;
+  background-color: red;
+  color: #fff;
+  font-size: 15px;
+  text-align: center;
+  margin: 0 0 0 20px;
+  border-radius: 5px;
+  line-height: 1.3;
+ }
+ 
+ .todo {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  background-color: #E9E9E9;
+  font-size: 17px;
+  text-align: center;
+  margin: 2px 0;
+  padding: 5px;
+  text-transform: uppercase;
+ }
+ 
+ .todo span {
+  flex-grow: 2;
+ }
+ 
+ .green {
+  background: #00F803;
+ }
